# aoc2024

./: LICENSE  README.md  dune  dune-project  dune.inc
examples/: day1.output  day10.output  day11.output  day12.output  day13.output  day14.output  day16.output  day19.output  day2.output  day21.output  day23.output  day25.output  day3.output  day4.output  day5.output  day6.output  day7.output  day8.output  day9.output
