(lang dune 3.16)

(name aoc2024)

(source
 (github jaaron/aoc2024))

(authors "J. Aaron Pendergrass")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://github.com/jaaron/aoc2024)

(package
 (name aoc2024)
 (synopsis "Advent of Code 2024")
 (description "Advent of Code 2024")
 (allow_empty)
 (depends ocaml dune core))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
